# Autopelago

./: .editorconfig  Autopelago.sln  Autopelago.sln.DotSettings  AutopelagoDefinitions.yml  Directory.Build.props  NOTICE  README.md  angular.json  builders.json  eslint.config.mjs  ngsw-config.json  nuget.config  package.json  prepare.ts  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  web-types.json
.forgejo/runner-dockerfiles/: Dockerfile.dotnet-sdk-8.0-forgejo-runner  Dockerfile.dotnet-sdk-9.0-forgejo-runner  Dockerfile.forgejo-runner
.forgejo/workflows/: build-and-test.yml  test.yml
.github/workflows/: build-and-test.yml  pub.yml
.junie/: guidelines.md
doc/: cool-world.dot  redesign.md  render.sh  sample-config.yaml  simple-progression.dot
public/: manifest.webmanifest
scripts/: build-and-publish-all-targets.sh
sign/: sign-it.zsh
src/: .globalconfig  AutopelagoDefinitions.yml  Directory.Build.props  generate-color-masks.ts  index.html  main.ts  polyfills.ts  regexp.d.ts  styles.scss  theme.scss  version-info.json
src/ArchipelagoClientDotNet/: AFewDisposables.cs  ArchipelagoClient.cs  ArchipelagoClientDotNet.csproj  ArchipelagoClientExtensions.cs  ArchipelagoConnection.cs  ArchipelagoPacketEvents.cs  ArchipelagoProtocolClient.cs  ArchipelagoRawClient.cs  AsyncEvent.cs  BackgroundTaskRunner.cs  BasicSequenceSegment.cs  Delegates.cs  Helper.cs  IArchipelagoClient.cs  IArchipelagoProtocolClient.cs  MySequenceSegment.cs  PacketModels.cs  WebSocketPacketChannel.cs  packages.lock.json
src/DataAnalysis/: Cargo.toml
src/DataAnalysis/src/: main.rs
(+296 files in other folders)
