[package]
name = "DataAnalysis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
bitflags = { version = "2.6.0", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive", "unicode", "wrap_help"] }
csv = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_repr = "0.1.19"
serde_yml = "0.0.12"
status-line = "0.2.0"
string-interner = "0.18.0"
